--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
       <a href="https://docs.google.com/spreadsheets/d/1bQqiCaiQ_JGN_B-415ftvVgoH9MmaF9A4ydZkkYXS-Q/edit?gid=5003036#gid=5003036" class="btn btn-28" target="_blank" data-tags="inventory" data-id="po-wise-qty"><i class="fas fa-exchange-alt"></i><span class="btn-text">PO Wise Qty Send/Sale/Available</span><span class="btn-tag">Inventory</span></a>
       <a href="https://amitaadhya.github.io/Quincesaleggn/" class="btn btn-19" target="_blank" data-tags="reports" data-id="sales-perf-ggn"><i class="fas fa-chart-pie"></i><span class="btn-text">Sales Performance Dashboard-GGN</span><span class="btn-tag">Reports</span></a>
       <a href="https://amitaadhya.github.io/noidaquincesale/" class="btn btn-19" target="_blank" data-tags="reports" data-id="sales-perf-noida"><i class="fas fa-chart-pie"></i><span class="btn-text">NOIDA-Sales Performance Dashboard</span><span class="btn-tag">Reports</span></a>
+      <a href="https://docs.google.com/spreadsheets/d/1GQucVQMxZanFgg27PGDpflR49a6DksezH4Pby2uFu4A/edit?gid=0#gid=0" class="btn btn-26" target="_blank" data-tags="reports" data-id="projection-vs-actual"><i class="fas fa-project-diagram"></i><span class="btn-text">QUINCE STYLE NAME WISE VALUE </span><span class="btn-tag">Reports</span></a>
     </div>
 
     <div class="recent-links" id="recentLinksSection">
